<resources>
    <string name="app_name">UniEats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="login_large">Login</string>
    <string name="signup">Sign Up</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_log">Log</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="titleFragment">Uni Eats</string>
    <string name="app_name_caps">UNI EATS</string>
    <string name="title_desc">The easiest way to track your food.\n Built by students, for students.</string>
    <string name="log_in">Log In</string>
    <string name="back">back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="calorieToggleButton">Calories</string>
    <string name="calsText">1200/200</string>

    <string name="mac">McMaster\nEATS</string>
    <string name="exit">exit</string>
    <string name="next">next</string>
    <string name="Eats">Eats</string>
    <string name="name_prompt">What\'s your name?</string>
    <string name="email_prompt">What\'s your email address?</string>
    <string name="uni_prompt">What university do you attend?</string>
    <string name="fn_prompt">What\'s your first name?</string>
    <string name="ln_prompt">What\'s your last name?</string>
    <string name="pass_prompt">Set your password:</string>
    <string name="user_prompt">Set your username:</string>
    <string name="password_error">SHIT password</string>
</resources>