<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/back_icon_startconst"
            android:layout_marginTop="@dimen/back_icon_upperconst"
            android:background="@color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_one"
            android:layout_width="159dp"
            android:layout_height="138dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/roboto"
            android:lineSpacingMultiplier="0.862"
            android:text="@string/app_name_caps"
            android:textColor="@color/primary_red"
            android:textSize="@dimen/title_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="370dp"
            android:layout_height="41dp"
            android:layout_marginTop="36dp"
            android:autofillHints=""
            android:background="@drawable/login_bg"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/input_padding"
            android:paddingEnd="@dimen/none"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_one">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="370dp"
            android:layout_height="41dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/login_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/input_padding"
            android:paddingEnd="@dimen/none"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameText" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="370dp"
            android:layout_height="43dp"
            android:layout_marginTop="91dp"
            android:background="@drawable/rounded_corners_red"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>