<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:background="@color/transparent"
            android:contentDescription="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_icon2" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="20dp"
            android:background="@color/transparent"
            android:contentDescription="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_forward_icon" />

        <TextView
            android:id="@+id/eats1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="123dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="127dp"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.04"
            android:text="@string/Eats"
            android:textAllCaps="true"
            android:textColor="@color/primary_red"
            android:textSize="36sp"
            app:layout_constraintEnd_toStartOf="@+id/imageButton4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton3"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:fontFamily="@font/roboto"
            android:inputType="textPersonName"
            android:letterSpacing="0.04"
            android:textSize="30sp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:backgroundTint="@color/bottom_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eats1">
        </EditText>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:letterSpacing="0.04"
            android:text="@string/pass_prompt"
            android:textColor="@color/text_black"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/name_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eats1"
            app:layout_constraintVertical_bias="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>